#append flags
#ACLOCAL_AMFLAGS = -I m4 --install ${ACLOCAL_FLAGS}


#flag for config.h include
CONFIG_F=-I$(top_srcdir) -I$(top_builddir)



bin_PROGRAMS = 	testSimdataBasic2DTesting \
				testSimdataBasic4DTesting \
				testMixtureTest \
				testMixtureTest2D \
				testAABCMixtureTest \
				testAABCMixtureTest2D \
				testNormalSDTest \
				testSimdataBasic4D \
 				testSimdataBasic4DSmall \
				testSimdataBasic2D \
				testSimdataBasic2DSmall \
				testSimdataKDE2DSmall \
				testSimdataKDE2D \
				testSimdataKDE4DSmall \
				testSimdataKDE4D \
				testMixtureTestKDE \
				testSimdataFixed2D \
				testSimdataFixed4D \
				testAABCSimdata2DTesting \
				testAABCSimdata4DTesting \
				testAABCSimdata2D \
				testAABCSimdata2DSmall \
				testAABCSimdata4D \
				testAABCSimdata4DSmall \
				testHalfAABCSimdata2DSmall \
				testHalfAABCSimdata4DSmall \
				testHalfAABCMixtureTest \
				testHalfAABCMixtureTest2D \
				testAABC_KDESimdata2DSmall \
				testAABC_KDESimdata4DSmall \
				testPriorLims

testPriorLims_SOURCES =			testPriorLims.cpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp
							
				
testSimdataBasic2DTesting_SOURCES =			testSimdataBasic2DTesting.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp			

testSimdataBasic4DTesting_SOURCES =			testSimdataBasic4DTesting.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp			


testMixtureTest_SOURCES =			testMixtureTest.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testMixtureTest2D_SOURCES =			testMixtureTest2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testAABCMixtureTest_SOURCES =			testAABCMixtureTest.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testAABCMixtureTest2D_SOURCES =			testAABCMixtureTest2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp


testHalfAABCMixtureTest_SOURCES =			testHalfAABCMixtureTest.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testHalfAABCMixtureTest2D_SOURCES =			testHalfAABCMixtureTest2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp


testNormalSDTest_SOURCES =			testNormalSDTest.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testCarverMCMCGR.cpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							automcmc_factory.cpp automcmc_factory.hpp

testSimdataBasic4D_SOURCES =			testSimdataBasic4D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testSimdataBasic4DSmall_SOURCES =		testSimdataBasic4DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testSimdataBasic2D_SOURCES =			testSimdataBasic2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testSimdataBasic2DSmall_SOURCES =			testSimdataBasic2DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testSimdataFixed2D_SOURCES =			testSimdataFixed2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp
							
testSimdataFixed4D_SOURCES =			testSimdataFixed4D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_GR.cpp testing_toolsAHABC_GR.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsMRS.cpp testing_toolsMRS.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp


testAABCSimdata2DTesting_SOURCES =			testAABCSimdata2DTesting.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testAABCSimdata4DTesting_SOURCES =			testAABCSimdata4DTesting.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testAABCSimdata2D_SOURCES =			testAABCSimdata2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testAABCSimdata2DSmall_SOURCES =			testAABCSimdata2DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp
														
testAABCSimdata4D_SOURCES =			testAABCSimdata4D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testAABCSimdata4DSmall_SOURCES =			testAABCSimdata4DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testHalfAABCSimdata2DSmall_SOURCES =			testHalfAABCSimdata2DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp
														

testHalfAABCSimdata4DSmall_SOURCES =			testHalfAABCSimdata4DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_GR.cpp testing_toolsAABC_GR.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsGR.cpp testing_toolsGR.hpp \
							testing_toolsMCMCGR.cpp testing_toolsMCMCGR.hpp \
							testCarverMCMCGR.cpp \
							automcmc_factory.cpp automcmc_factory.hpp

testMixtureTestKDE_SOURCES =			testMixtureTestKDE.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp


testSimdataKDE2DSmall_SOURCES =			testSimdataKDE2DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_KDE.cpp testing_toolsAHABC_KDE.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp
							
testSimdataKDE2D_SOURCES =			testSimdataKDE2D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_KDE.cpp testing_toolsAHABC_KDE.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp

testSimdataKDE4DSmall_SOURCES =			testSimdataKDE4DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_KDE.cpp testing_toolsAHABC_KDE.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp

testSimdataKDE4D_SOURCES =			testSimdataKDE4D.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAHABC_KDE.cpp testing_toolsAHABC_KDE.hpp \
							testing_toolsAHABC.cpp testing_toolsAHABC.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp

testAABC_KDESimdata2DSmall_SOURCES =			testAABC_KDESimdata2DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_KDE.cpp testing_toolsAABC_KDE.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp

testAABC_KDESimdata4DSmall_SOURCES =			testAABC_KDESimdata4DSmall.cpp \
							test_routines.hpp \
							testing_tools.cpp testing_tools.hpp \
							log_memory.cpp log_memory.hpp \
							testing_toolsSimdata.cpp testing_toolsSimdata.hpp \
							testing_toolsAABC_KDE.cpp testing_toolsAABC_KDE.hpp \
							testing_toolsAABC.cpp testing_toolsAABC.hpp \
							testing_toolsKDE.cpp testing_toolsKDE.hpp


EXTRA_DIST =

#AM_CPPFLAGS = -I${top_builddir}/src -I$(TARGETS)
#LDADD = -lcxsc ${top_builddir}/src/libmrs.a



#basic am compiler flags
AM_CPPFLAGS = $(CONFIG_F) $(BOOST_CPPFLAGS)

#all the flags and make sure we have the AM_CPPFLAGS too or it will be overridden	
#test_CPPFLAGS =  $(AM_CPPFLAGS)

AM_LDFLAGS = $(BOOST_PROGRAM_OPTIONS_LDFLAGS) 

#additional library for every program
LDADD = -lmct -lcxsc -lmrs

#program-specific additions to LDADD - this overrides LDADD so I make that part of the prog-specific thing
#important - add libmct.a (in LDADD) first

testPriorLims_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataBasic2DTesting_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataBasic4DTesting_LDADD = ${LDADD} -lmscplusplus-0.0 

testMixtureTest_LDADD = ${LDADD} -lmscplusplus-0.0 

testMixtureTest2D_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataBasic4D_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataBasic4DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataBasic2D_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataBasic2DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataFixed2D_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataFixed4D_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABCSimdata4DTesting_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABCSimdata2DTesting_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABCSimdata2D_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABCSimdata2DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABCSimdata4D_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABCSimdata4DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testHalfAABCSimdata2DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testHalfAABCSimdata4DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataKDE2DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataKDE2D_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataKDE4DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testSimdataKDE4D_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABC_KDESimdata2DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

testAABC_KDESimdata4DSmall_LDADD = ${LDADD} -lmscplusplus-0.0 

LIBS += $(BOOST_PROGRAM_OPTIONS_LIBS)
